Fix overflow issue for modal inputs

--- a/app/assets/stylesheets/editor.sass
+++ b/app/assets/stylesheets/editor.sass
@@ -5,7 +5,6 @@
   position: absolute
   border: none
   width: 100%
-  overflow-x: hidden
   white-space: nowrap
   z-index: 1
   text-align: center
